--- a/clothing-shop/src/components/menu-item/menu-item.style.scss
+++ b/clothing-shop/src/components/menu-item/menu-item.style.scss
@@ -1,17 +1,3 @@
-.homepage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 80px;
-    }
-
-    .directory-menu {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    }
-
 .menu-item {
     min-width: 30%;
     height: 240px;
@@ -21,7 +7,18 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
+    background-position: top center;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
+    &:hover {
+        cursor: pointer;
 
+        & .background-image {
+            transform: scale(1.1);
+            transition: transform 5s cubic-bezier(0.25, 0.45, 0.45, 0.95) ;
+        }
+    }
     &:first-child {
     margin-right: 7.5px;
     }
@@ -38,6 +35,7 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background-color: rgba(255,255,255,0.8);
 
     .title {
         font-weight: bold;
@@ -50,5 +48,14 @@
         font-weight: lighter;
         font-size: 16px;
         }
+    }
+    &.large {
+        height: 350px;
+    }
+    .background-image {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
     }
 }
