added styling to the work

--- a/clothing-shop/src/App.css
+++ b/clothing-shop/src/App.css
@@ -6,4 +6,5 @@
 
 body {
     font-family: 'Open Sans Condensed', 'Open Sans', sans-serif;
+    padding: 1em; /*This is to prevent the page from being to tight on the edges*/
 }
