--- a/clothing-shop/src/components/menu-item/menu-item.style.scss
+++ b/clothing-shop/src/components/menu-item/menu-item.style.scss
@@ -35,7 +35,7 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgba(255, 255, 255, 0.911);
 
     .title {
         font-weight: bold;
