--- a/clothing-shop/src/components/sign-in/sign-in.style.scss
+++ b/clothing-shop/src/components/sign-in/sign-in.style.scss
@@ -9,4 +9,13 @@
     h2, span {
         text-align: center;
     }
+    .buttons {
+        display: flex;
+        justify-content: space-between;
+        @media screen and (max-width: 800px) {
+            flex-direction: column;
+            justify-content: stretch;
+        }
+
+    }
 }
