Still trying to undersatnd mapDispatchToProps where is the yser parameter generated from

--- a/clothing-shop/src/pages/sign-in-up-page/sign-in-up-page.style.scss
+++ b/clothing-shop/src/pages/sign-in-up-page/sign-in-up-page.style.scss
@@ -1,6 +1,7 @@
 .sign-in-page {
     display: flex;
     justify-content: space-around;
+    align-items: flex-start;
     @media screen and (max-width:500px) {
         flex-direction: column;
     }
