--- a/clothing-shop/src/components/sign-up/sign-up.style.scss
+++ b/clothing-shop/src/components/sign-up/sign-up.style.scss
@@ -3,7 +3,11 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    button {
-        align-self: center;
+    h2, & > span {
+        text-align: center;
+    }
+    @media screen and (max-width:500px) {
+        margin-top: 30px;
+        width: 100%;
     }
 }
