--- a/clothing-shop/src/components/buttons/buttons.primary.style.scss
+++ b/clothing-shop/src/components/buttons/buttons.primary.style.scss
@@ -29,4 +29,14 @@
             border: none;
         }
     }
+    &.inverted {
+        background-color:invert(rgb(242, 255, 250));
+        color: invert(black);
+        border: 1px solid invert(rgb(0, 0, 0));
+        &:hover{
+            background-color: white;
+            color: black;
+            border: none;
+        }
+    }
 }
