--- a/clothing-shop/src/components/collection/collection.style.scss
+++ b/clothing-shop/src/components/collection/collection.style.scss
@@ -2,9 +2,17 @@
     width: 22%;
     display: flex;
     flex-direction: column;
+    position: relative;
     height: 350px;
     align-items: center;
-
+    .custom-button {
+        width:90%;
+        top: 255px;
+        opacity: 0.7;
+        position: absolute;
+        transform: translate(-50%,-50%);
+        display: none;
+    }
     .image {
     width: 100%;
     height: 95%;
@@ -28,5 +36,14 @@
     .price {
         width: 10%;
     }
+    }
+    &:hover{
+        .image{
+            opacity: 0.7;
+        }
+        .custom-button{
+            opacity: 1;
+            display: block;
+        }
     }
 }
