--- a/clothing-shop/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/clothing-shop/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -15,10 +15,25 @@
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow-y: auto;
     }
 
     button {
     margin-top: auto;
+    }
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px grey;
+        border-radius: 1px;
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: rgb(66, 54, 54);
+        border-radius: 10px;
     }
 }
