--- a/clothing-shop/src/components/checkout-item/checkout-item.style.scss
+++ b/clothing-shop/src/components/checkout-item/checkout-item.style.scss
@@ -24,6 +24,11 @@
 
     .quantity {
     padding-left: 20px;
+    display: flex;
+        .arrow {
+            cursor: pointer;
+            margin: 0 5px;
+        }
     }
 
     .remove-button {
