--- a/clothing-shop/src/App.scss
+++ b/clothing-shop/src/App.scss
@@ -13,13 +13,13 @@ body {
     
     /* Track */
     &::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 5px grey;
-        border-radius: 1px;
+        box-shadow: inset 1px 0 5px rgb(22, 17, 17);
+        border-radius: 10px;
     }
     
     /* Handle */
     &::-webkit-scrollbar-thumb {
-        background: rgb(66, 54, 54);
+        background: rgb(92, 14, 14);
         border-radius: 10px;
     }
 }
